224Project - Thread Safe Option
- added mutexes to class_nouse, class_inuse, class_mem, class_limit shared resources in cma.c.
- added thread_test.c to run multiple threads all accessing cma at the same time.
(sometimes you need to pipe to less to see output)
- tried to write thread_test.c in c++ but couldn't get it to link against cma. :(

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,16 +15,22 @@ configure_file (
 # so that we will find project_config.h
 include_directories("${PROJECT_BINARY_DIR}")
 
-#include_directories ("${PROJECT_SOURCE_DIR}/cma")
-#add_subdirectory (cma)
+# add Threads
+find_package(Threads)
 
 # add CMA Library
-add_library (cma cma.c)
+add_library (cma SHARED cma.c)
+#target_link_libraries(cma pthread)
 
 # add the executable
 add_executable(ma ma.c)
 target_link_libraries (ma cma)
+target_link_libraries (ma ${CMAKE_THREAD_LIBS_INIT})
 
+
+add_executable(thread_test thread_test.c)
+target_link_libraries (thread_test cma)
+target_link_libraries (thread_test ${CMAKE_THREAD_LIBS_INIT})
 
 # add the install targets
 #install (TARGETS cs224_project DESTINATION bin)
